--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Welcome</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<h1>Web Developer</h1>
+								<p>Hello, my name is Cristina and welcome to my portfolio! Here you will find my project collection. <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
