Landing Message Updated

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-user"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Web Developer</h1>
-								<p>Hello, my name is Cristina and welcome to my portfolio! Here you will find my project collection. <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Born in New Jersey, living in Alabama, raised by the 90s<br />
+								Skilled in HTML and CSS, currently learning JS</p>
 							</div>
 						</div>
 						<nav>
@@ -63,7 +63,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>How did I know I wanted to be a Web Developer? To be perfectly honest I didn't know until a couple of years ago. Growing up I wasn't raised in a house that had computers so I didn't get introduced to it until I married my programmer husband. If I rewind even further there were hints of this design passion during the MySpace Era. Yes, I use to spend hours customizing my page to have to most unique features no other page had. And it doesn't suprise me at all my favorite course in college was Desktop Publishing which I had to take as part of my Business Administration Degree. </p>
 							</article>
 
 						<!-- Contact -->
