--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>How did I know I wanted to be a Web Developer? To be perfectly honest I didn't know until a couple of years ago. Growing up I wasn't raised in a house that had computers so I didn't get introduced to it until I married my programmer husband. If I rewind even further there were hints of this design passion during the MySpace Era. Yes, I use to spend hours customizing my page to have to most unique features no other page had. And it doesn't suprise me at all my favorite course in college was Desktop Publishing which I had to take as part of my Business Administration Degree. </p>
+								<p>How did I end up wanting to pursue web development with a background in healthcare finance? The answer is like a lot of other programmers who discovered this passion that they didn’t know they had until they got introduced to coding for the first time. <br><br>I grew up in a house that didn’t have access to a computer, and it wasn’t until I got married where I started to enjoy the more technical side of myself. This is all thanks to my husband of course who is now a Programmer and Game Designer. If I had to pinpoint a moment that hinted towards this career goal it would date back to the MySpace Era. Yes, I did tinker with HTML and CSS to personalize my page and I had an incredible time doing it. It also felt great when a friend would compliment my site or asked how I made those changes.<br><br>I didn’t realize at the time that I could become a Web Developer because where I lived was small town with no tech opportunities, so I continued with a secure career in finance. It wasn’t until my family moved to Orlando, FL that I realized I can make this dream become a reality.<br><br>Which brings to present time. For the past couple months, I have dived into SQL, HTML, CSS, and currently learning JavaScript. As a self-taught web developer, I have learned that I am self-disciplined, extremely focused, independent, and I am able to stay motivated all while learning to code. In the future it is my goal to freelance to build my portfolio further, but in the meantime, I will upload my self-projects for you to view.  
+									 </p>
 							</article>
 
 						<!-- Contact -->
@@ -90,10 +91,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -343,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Designed By: <a href="#about">Cristina Altreche</a>.</p>
 					</footer>
 
 			</div>
