--- a/index.html
+++ b/index.html
@@ -63,14 +63,30 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>How did I end up wanting to pursue web development with a background in healthcare finance? The answer is like a lot of other programmers who discovered this passion that they didn’t know they had until they got introduced to coding for the first time. <br><br>I grew up in a house that didn’t have access to a computer, and it wasn’t until I got married where I started to enjoy the more technical side of myself. This is all thanks to my husband of course who is now a Programmer and Game Designer. If I had to pinpoint a moment that hinted towards this career goal it would date back to the MySpace Era. Yes, I did tinker with HTML and CSS to personalize my page and I had an incredible time doing it. It also felt great when a friend would compliment my site or asked how I made those changes.<br><br>I didn’t realize at the time that I could become a Web Developer because where I lived was small town with no tech opportunities, so I continued with a secure career in finance. It wasn’t until my family moved to Orlando, FL that I realized I can make this dream become a reality.<br><br>Which brings to present time. For the past couple months, I have dived into SQL, HTML, CSS, and currently learning JavaScript. As a self-taught web developer, I have learned that I am self-disciplined, extremely focused, independent, and I am able to stay motivated all while learning to code. In the future it is my goal to freelance to build my portfolio further, but in the meantime, I will upload my self-projects for you to view.  
-									 </p>
+								<p>How did I end up wanting to pursue web development with a background in healthcare finance? The answer is like a lot of other programmers who discovered this passion that they didn’t know they had until they got introduced to coding for the first time.</p>
+								<p>I grew up in a house that didn’t have access to a computer, and it wasn’t until I got married where I started to enjoy the more technical side of myself. This is all thanks to my husband of course who is now a Programmer and Game Designer. If I had to pinpoint a moment that hinted towards this career goal it would date back to the MySpace Era. Yes, I did tinker with HTML and CSS to personalize my page and I had an incredible time doing it. It also felt great when a friend would compliment my site or asked how I made those changes.</p>
+								<p>I didn’t realize at the time that I could become a Web Developer because where I lived was a small town with no tech opportunities, so I continued with a secure career in finance. It wasn’t until my family moved to Orlando, FL that I realized I can make this dream become a reality.</p>
+								<p>For the past couple months, I have dived into SQL, HTML, CSS, and currently learning JavaScript. As a self-taught web developer, I have learned that I am self-disciplined, extremely focused, independent, and I am able to stay motivated all while learning to code. In the future it is my goal to freelance to build my portfolio further, but in the meantime, I will upload my self-projects for you to view.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<div class="contact-info">
+									<div class="card">
+										<i class="card-icon far fa-envelope"></i>
+										<p id="ptagcontact">c.altreche@gmail.com</p>
+									</div>
+									<div class="card">
+										<i class="card-icon fas fa-map-marker-alt"></i>
+										<p id="ptagcontact">Madison, AL</p>
+									</div>
+									<div class="card">
+										<i class="card-icon fas fa-phone"></i>
+										<p id="ptagcontact">000-000-0000</p>
+									</div>
+								</div>
+								<!--<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -89,8 +105,9 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form>-->
 								<ul class="icons">
+									<li><a href="https://github.com/cristina-altreche" class="icon brands fa-linkedin"><span class="label">LinkeIn</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
