Polished Contact Page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -20,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-user"></span>
+							<span class="animated infinite bounce delay-2s" class="icon fa-user"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -86,6 +87,7 @@
 										<p id="ptagcontact">000-000-0000</p>
 									</div>
 								</div>
+								<hr>
 								<!--<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -106,10 +108,11 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>-->
+								<p id="icon-header">Let's Connect</p>
 								<ul class="icons">
-									<li><a href="https://github.com/cristina-altreche" class="icon brands fa-linkedin"><span class="label">LinkeIn</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li id="linkedin"><a href="#" class="icon brands fab fa-linkedin"><span class="label">LinkeIn</span></a></li>
+									<li id="facebook"><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li id="github"><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
