Contact page Final Draft

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="animated infinite bounce delay-2s" class="icon fa-user"></span>
+						<div  class="logo">
+							<div class="animated zoomInDown delay-.5s">
+								<span class="fas fa-meteor fa-2x"></span>
+							</div>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -110,7 +112,7 @@
 								</form>-->
 								<p id="icon-header">Let's Connect</p>
 								<ul class="icons">
-									<li id="linkedin"><a href="#" class="icon brands fab fa-linkedin"><span class="label">LinkeIn</span></a></li>
+									<li id="linkedin"><a href="https://www.linkedin.com/in/cristina-alt/" class="icon brands fab fa-linkedin"><span class="label">LinkeIn</span></a></li>
 									<li id="facebook"><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li id="github"><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
