Polished Skill Row 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 												<li class="fas fa-star css-three"></li>
 												<li class="fas fa-star css-four"></li>
 												<li class="fas fa-star css-five"></li>
+												<li class="fas fa-star css-six"></li>
 											</ul>
+											<p class="sk-result">Experienced</p>
 									</div>
 								
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
