Three complete Skill Rows

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div  class="logo">
-							<div class="animated zoomInDown delay-.5s">
+							<div class="animated"><!--Animate CSS Here-->
 								<span class="fas fa-meteor fa-2x"></span>
 							</div>
 						</div>
@@ -62,7 +62,31 @@
 											</ul>
 											<p class="sk-result">Experienced</p>
 									</div>
-						
+									<div class="sk-container">
+										<img src="images/html.png" alt="">
+											<ul class="sk-points">
+												<li class="fas fa-star css-one"></li>
+												<li class="fas fa-star css-two"></li>
+												<li class="fas fa-star css-three"></li>
+												<li class="fas fa-star css-four"></li>
+												<li class="fas fa-star css-five"></li>
+												<li class="fas fa-star css-six"></li>
+											</ul>
+											<p class="sk-result">Experienced</p>
+									</div>
+									<div class="sk-container">
+										<img src="images/js.png" alt="">
+											<ul class="sk-points">
+												<li class="fas fa-star css-one"></li>
+												<li class="fas fa-star css-two"></li>
+												<li class="fas fa-star css-three"></li>
+												<li class="fas fa-star css-four"></li>
+												<li class="fas fa-star css-five"></li>
+												<li class="fas fa-star css-six"></li>
+											</ul>
+											<p class="sk-result">Experienced</p>
+									</div>
+									
 							</article>
 
 						<!-- Work -->
