Padding updated to skills.

--- a/index.html
+++ b/index.html
@@ -67,50 +67,7 @@
 					<li>
 						<h3>JQUERY</h3><span class="bar"><span class="jquery"></span></span>
 					</li>
-					
-
-
-					
 				</div>
-
-				<!--2nd Skill Row Draft-->
-				<!--<div class="sk-container">
-										<img src="images/css.png" alt="">
-											<ul class="sk-points">
-												<li class="fas fa-star css-one"></li>
-												<li class="fas fa-star css-two"></li>
-												<li class="fas fa-star css-three"></li>
-												<li class="fas fa-star css-four"></li>
-												<li class="fas fa-star css-five"></li>
-												<li class="fas fa-star css-six"></li>
-											</ul>
-											<p class="sk-result">Experienced</p>
-									</div>
-									<div class="sk-container">
-										<img src="images/html.png" alt="">
-											<ul class="sk-points">
-												<li class="fas fa-star css-one"></li>
-												<li class="fas fa-star css-two"></li>
-												<li class="fas fa-star css-three"></li>
-												<li class="fas fa-star css-four"></li>
-												<li class="fas fa-star css-five"></li>
-												<li class="fas fa-star css-six"></li>
-											</ul>
-											<p class="sk-result">Experienced</p>
-									</div>
-									<div class="sk-container">
-										<img src="images/js.png" alt="">
-											<ul class="sk-points">
-												<li class="fas fa-star css-one"></li>
-												<li class="fas fa-star css-two"></li>
-												<li class="fas fa-star css-three"></li>
-												<li class="fas fa-star css-four"></li>
-												<li class="fas fa-star css-five"></li>
-												<li class="fas fa-star css-six"></li>
-											</ul>
-											<p class="sk-result">Experienced</p>
-									</div> -->
-
 			</article>
 
 			<!-- Work -->
@@ -167,7 +124,7 @@
 						<p id="ptagcontact">000-000-0000</p>
 					</div>
 				</div>
-				<hr>
+				<hr id="hr-contact">
 				<!--<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -190,11 +147,11 @@
 								</form>-->
 				<p id="icon-header">Let's Connect</p>
 				<ul class="icons">
-					<li id="linkedin"><a href="https://www.linkedin.com/in/cristina-alt/"
+					<li id="linkedin"><a href="https://www.linkedin.com/in/cristina-alt/" target="_blank"
 							class="icon brands fab fa-linkedin"><span class="label">LinkeIn</span></a></li>
 					<li id="facebook"><a href="#" class="icon brands fa-facebook-f"><span
 								class="label">Facebook</span></a></li>
-					<li id="github"><a href="https://github.com/cristina-altreche" class="icon brands fa-github"><span
+					<li id="github"><a href="https://github.com/cristina-altreche" target="_blank" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
 			</article>
